# synthetic-stock-crypto-app

./: LICENSE  README.md  package-lock.json
backend/: .env.example  Cargo.toml  readme.md
backend/cache/: crypto_price_1_0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE.json  crypto_price_1_0xdac17f958d2ee523a2206206994597c13d831ec7.json  stock_price_NVDA.json  stock_price_TSLL.json  top_stocks.json
backend/src/: main.rs
backend/src/services/: api.rs  solana_service.rs
contracts/tests/: stock_contracts.ts
frontend/: README.md  hackathon-workspace.code-workspace  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/providers/: SolanaProvider.tsx
frontend/src/components/solana/: WalletButton.tsx
frontend/src/components/swap/: SwapButton.tsx  SwapDetails.tsx  SwapInterface.tsx  TokenInput.tsx  TokenSelector.tsx
frontend/src/hooks/: usePrices.ts  useProgram.ts  useSolanaContract.ts  useStockList.ts  useSwap.ts  useSwapQuote.ts  useTokenList.ts  useTransactionToast.ts
frontend/src/lib/: api-client.ts  wagmi.ts
frontend/src/types/: index.ts
stock_contracts/: .pnp.cjs  Anchor.toml
stock_contracts/programs/stock_contracts/: Cargo.toml
stock_contracts/programs/stock_contracts/src/: lib.rs
