[package]
name = "synthetic-stock-crypto-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for API signing
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

# Logging
env_logger = "0.10"

[dev-dependencies]
actix-rt = "2.9"
futures = "0.3"